Final stuff :alien:

--- a/we_refs.bib
+++ b/we_refs.bib
@@ -36,3 +36,67 @@
   year={2015},
   publisher={John Benjamins}
 }
+
+@article{rosa2017unsettling,
+  title={Unsettling race and language: Toward a raciolinguistic perspective},
+  author={Rosa, Jonathan and Flores, Nelson},
+  journal={Language in society},
+  volume={46},
+  number={5},
+  pages={621--647},
+  year={2017},
+  publisher={Cambridge University Press}
+}
+
+@book{saraceni2015world,
+  title={World Englishes: A critical analysis},
+  author={Saraceni, Mario},
+  year={2015},
+  publisher={Bloomsbury Publishing}
+}
+
+@book{bell2013guidebook,
+  title={The guidebook to sociolinguistics},
+  author={Bell, Allan},
+  year={2013},
+  publisher={John Wiley \& Sons}
+}
+
+@book{crystal2003english,
+  title={English as a global language},
+  author={Crystal, David},
+  year={2003},
+  publisher={Ernst Klett Sprachen}
+}
+
+@book{deterding2007singapore,
+  title={Singapore English},
+  author={Deterding, David},
+  year={2007},
+  publisher={Edinburgh University Press}
+}
+
+@book{kachru2006handbook,
+  title={The handbook of world Englishes},
+  author={Kachru, Braj B and Kachru, Yamuna and Nelson, Cecil L and Davis, Daniel R and Proshina, Zoya G},
+  year={2006},
+  publisher={Wiley Online Library}
+}
+
+@book{kirkpatrick2010routledge,
+  title={The Routledge handbook of world Englishes},
+  author={Kirkpatrick, Andy},
+  year={2010},
+  publisher={Routledge}
+}
+
+@article{bolton2017brexit,
+  title={Brexit and the future of English in Europe},
+  author={Bolton, Kingsley and Davis, Daniel R},
+  journal={World Englishes},
+  volume={36},
+  number={3},
+  pages={302--312},
+  year={2017},
+  publisher={Wiley Online Library}
+}
