--- a/Course_Guide.Rmd
+++ b/Course_Guide.Rmd
@@ -1,6 +1,6 @@
 
 ---
-title: "Universität Salzburg | Brad Mackay"
+title: "Universität Salzburg" 
 author: "Winter Semester 20/21"
 css: textBoxes.css
 output:
@@ -15,22 +15,29 @@ bibliography: we_refs.bib
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
 :::: {.tealbox data-latex=""}
 :::: {.center data-latex=""}
 **Contact Info**
 :::
 **Lecturer:** Brad Mackay <br>
 **Office:** Unipark 3.220 <br>
-**Email:** bradley.mackay@sbg.ac.at<br>
-**Office Hours:** Thursdays 17:00 - 18:00<br>
+**Email:** bradley.mackay<span>@</span>sbg.ac.at<br>
+**Office Hours:** Thursdays 16:00 - 17:00<br>
 **Teaching:** 90 min seminar<br>
 **Seminar:** Unipark 1.001, Thursdays 17:15 - 18:45<br>
 ::::
 
+
+<br>
+<br>
+<blockquote cite="https://en.wikipedia.org/wiki/Max_Weinreich">
+    <p>a shprakh iz a dialekt mit an armey un flot<br>[*A language is a dialect with an army and navy*]</p>
+    <footer>Max Weinreich</footer>
+</blockquote>
+
 ## Course Description
 
-The course aims to introduce students to a variety of different ‘Global Englishes’ beyond the British or American varieties with which they may already be familiar. English is spoken (to some extent) by an estimated 2,000,000,000 people (Crystal 2004) and is the official language in over 80 sovereign and non-sovereign states. We will examine the historical and political contexts that have led to the global spread of English and we will take a closer look at the ways English is used, and how it has developed, in different contexts around the world.
+The course aims to introduce students to a variety of different ‘Global Englishes’ beyond the British or American varieties with which they may already be familiar. English is spoken (to some extent) by an estimated 1,500,000,000 people [@crystal2003english 6] and is the official language in over 80 sovereign and non-sovereign states. We will examine the historical and political contexts that have led to the global spread of English and we will take a closer look at the ways English is used, and how it has developed, in different contexts around the world.
 
 The course is split into two main thematic blocks: first, we will consider the main theoretical concepts which have been used to study the spread of English as a global language, and in the second block, we will be exploring these theories through a series of case studies, looking at a variety of English from a different context each week. We will use video, audio and written text to explore the variation in locally marked phonetic, syntactic and lexical features. 
 
@@ -57,56 +64,64 @@ The readings for each session are available on Blackboard. Please make sure you 
 
 ### Corpus of Global Web-Based English (GloWbE)
 
-We will be using the GloWbE corpus [@davies2015expanding]. You can access this corpus for free with your university email account, you just need to register an account with your university email address first, this can be done by clicking [here](https://www.english-corpora.org/glowbe/), or by going to https://www.english-corpora.org/glowbe/
+We will be using the GloWbE corpus [@davies2015expanding] to do some research in this course. GloWbE is a corpus of 1.9 Billion English words from 20 different countries. You can access this corpus for free with your university email account, you just need to register an account with your university email address first, this can be done by clicking [here](https://www.english-corpora.org/glowbe/), or by going to https://www.english-corpora.org/glowbe/ and following the sign up instructions.
 
 
 ## Assessment
-#### Reading 15%
-#### Midterm 25%
-#### Presentation 20%
-#### Final Project 40%
+
 
 :::: {.yellowbox data-latex=""}
 :::: {.center data-latex=""}
-**Reminder**
+**Reading quizzes 20%<br>**
+**Midterm exam 20%<br>**
+**Presentation 20%<br>**
+**Final Project 40%**
 :::
-Assessment is to be undertaken individually. All suspected cases of plagiarism and collusion will be reported and investigated.You must attend class consistently. You must attend at least 80% of the sessions, excessive lateness will be considered absence.
+**Reminder**<br>
+Assessment is to be undertaken individually. All suspected cases of plagiarism and collusion will be reported and investigated. You must attend at least 80% of the sessions, excessive lateness will be considered absence.
 
 ::::
 
+<br>
+Your final project is a piece of written work which might be on the same topic as your group presentation, or it could be on a different topic that you find interesting. For information how to format a piece of written work, see the English & American studies [style sheet](https://www.uni-salzburg.at/fileadmin/multimedia/Anglistik%20und%20Amerikanistik/documents/Leselisten_Stylesheets/Stylesheets_2018/STYLE_SHEET_2015_sample_paper_linguistics.pdf).
+
 ## Feedback
-You will receive written feedback on the midterm, your presentation and your final assignment. The reading assignments on Blackboard are graded automatically and you will receive a grade after completing each test. If you would like any further feedback or to discuss your feedback further please come to my office hours or email me to arrange a meeting.
+You will receive written feedback on the midterm, your presentation and your final assignment. Some reading assignments on Blackboard are graded automatically and you will receive a grade after completing each test, others require a short written response and will be marked by me with specific feedback. If you would like any further feedback or to discuss your feedback, please come to my office hours or email me to arrange a meeting.
 
 ## Suggested Reading
 If you are accessing this guide online, you can click on the pink links and they should take you directly to the text. If you are not accessing this guide from a university computer, you may need to use the university VPN. For information on accessing information from home click [here](https://www.uni-salzburg.at/index.php?id=32331)
 <br>
 <br>
 I would highly recommend that everyone read [Unsettling race and language: Toward a raciolinguistic perspective](https://www.cambridge.org/core/services/aop-cambridge-core/content/view/30FFC5253F465905D75CDFF1C1363AE3/S0047404517000562a.pdf/unsettling_race_and_language_toward_a_raciolinguistic_perspective.pdf) [@rosa2017unsettling]. You might find it a bit challenging, and it is quite a long read but it provides a fantastic summary of the issues of race and language which are important for the critical analysis of language we will be carrying out in this course.
-
+<br>
+<br>
+The resources listed in the references section are a great start if you want to find out more about a topic, if you are interested in something particular and would like some recommendations, please just ask!
 
 ## Syllabus
 
 |Session|Date|Topic|Preparation|Notes|
-|-|--|---|---|---|
+|-|--|---|---|--|
 |1|08/10|Introduction: Who owns English? <br> Attitudes to English and English speakers | None| |
-|-| No class this week| |
-|2|22/10| The Spread of English| Global Englishes p10-27 <br> World Englishes: A critical analysis p45-59|Extra reading as we have a 2 week gap|
-|3|29/10|Pidgins and Creoles| Global Englishes p35-56|
-|4|05/11|
-|5|12/11|
-|6|19/11|
-|7|26/11|
-|8|03/12|
-|9|10/12|
-|10|17/12|
-|11|14/01|
-|12|21/01|
-|13|29/01|
+|-| No class this week| |||
+|2|22/10| The Spread of English| Global Englishes p10-27 <br> World Englishes: A critical analysis p45-59|<span style="color: #139e38;">**READING QUIZ 1**</span>|
+|3|29/10|Pidgins and Creoles| Global Englishes p35-41<br>Guidebook to Sociolinguistics p76-84|<span style="color: #139e38;">**READING QUIZ 2**</span>|
+|4|05/11|English in South Africa| World Englishes p114-118<br> Handbook of World Englishes p158-168|<span style="color: #139e38;">**READING QUIZ 3**</span>|
+|5|12/11|English in South Asia <br> (India & Pakistan)|Handbook of World Englishes<br> p90-108<br> World Englishes p147-151|<span style="color: #139e38;">**READING QUIZ 4**</span>|
+|6|19/11|Revision |Study for the midterm| <span style="color: #D60487;">**MIDTERM EXAM**</span>|
+|7|26/11|English in Australia &<br>New Zealand/ Aotearoa|Handbook of World Englishes p74-84<br>World Englishes p100-114|<span style="color: #139e38;">**READING QUIZ 5**</span>|
+|8|03/12|English in the Caribbean |Handbook of World Englishes p203-219|<span style="color: #139e38;"></span>|
+|9|10/12|English in East & West Africa|World Englishes p154-166<br>Routledge Handbook of World Englishes p197-209 |<span style="color: #139e38;">**READING QUIZ 6**</span>|
+|10|17/12|English in South East Asia|World Englishes p169-180<br> Singapore English p1-6<br>Global Englishes p140-145|<span style="color: #139e38;">**READING QUIZ 7**</span><br> By the end of this week you should all have a plan for your group presentations & your final project.|
+|-|Christmas break|
+|11|14/01|Lesser known varieties of English |World Englishes p127-133|<span style="color: #139e38;">**READING QUIZ 8**</span>|
+|12|21/01|English in the Expanding circle & <br> The future of English as a Lingua Franca|World Englishes p186-196<br>Brexit & the future of English in Europe [@bolton2017brexit]|<span style="color: #139e38;">**READING QUIZ 9**</span>|
+|13|29/01|Group presentations
 
 
 ---
 nocite: |
-  @jenkins2014global, @melchers2011world
+  @jenkins2014global, @melchers2011world, @saraceni2015world, @seargeant2013english, @deterding2007singapore,
+  @kachru2006handbook, @bell2013guidebook, @kirkpatrick2010routledge
 ---
 
 ## References
