--- a/we_refs.bib
+++ b/we_refs.bib
@@ -5,6 +5,13 @@
   publisher={Cambridge University Press}
 }
 
+@book{schneider2007postcolonial,
+  title={Postcolonial English: Varieties around the world},
+  author={Schneider, Edgar W},
+  year={2007},
+  publisher={Cambridge University Press}
+}
+
 @book{jenkins2014global,
   title={Global Englishes: A resource book for students},
   author={Jenkins, Jennifer},
@@ -81,6 +88,15 @@
   author={Kachru, Braj B and Kachru, Yamuna and Nelson, Cecil L and Davis, Daniel R and Proshina, Zoya G},
   year={2006},
   publisher={Wiley Online Library}
+}
+
+@collection{kachru1985standards,
+  title={Standards, codification and sociolinguistic realism: The English language in the outer circle},
+  booktitle={English in the World: Teaching and learning the language and literatures},
+  editor={Quirk, R. and Widdowson, H.},
+  author={Kachru, Braj B},
+  year={1985},
+  publisher={Cambridge University Press}
 }
 
 @book{kirkpatrick2010routledge,
