--- a/Course_Guide.Rmd
+++ b/Course_Guide.Rmd
@@ -111,10 +111,10 @@ The resources listed in the references section are a great start if you want to 
 |7|26/11|English in Australia &<br>New Zealand/ Aotearoa|Handbook of World Englishes p74-84<br>World Englishes p100-114|<span style="color: #139e38;">**READING QUIZ 4**</span>|
 |8|03/12|English in the Caribbean |Handbook of World Englishes p203-219|<span style="color: #139e38;"></span>|
 |9|10/12|English in East & West Africa|World Englishes p154-166<br>Routledge Handbook of World Englishes p197-209 |<span style="color: #139e38;">**READING QUIZ 5**</span>|
-|10|17/12|English in South East Asia|World Englishes p169-180<br> Singapore English p1-6<br>Global Englishes p140-145|<span style="color: #139e38;">**READING QUIZ 6**</span><br> By the end of this week you should all have a plan for your group presentations & your final project.|
+|10|17/12|English in South East Asia|World Englishes p169-180<br> Singapore English p1-6<br>Global Englishes p140-145|<br> By the end of this week you should all have a plan for your group presentations & your final project.|
 |-|Christmas break|
-|11|14/01|Lesser known varieties of English |World Englishes p127-133|<span style="color: #139e38;">**READING QUIZ 7**</span>|
-|12|21/01|English in the Expanding circle & <br> The future of English as a Lingua Franca|World Englishes p186-196<br>Brexit & the future of English in Europe [@bolton2017brexit]|<span style="color: #139e38;">**READING QUIZ 8**</span>|
+|11|14/01|Lesser known varieties of English |World Englishes p127-133|<span style="color: #139e38;">**READING QUIZ 6**</span>|
+|12|21/01|English in the Expanding circle & <br> The future of English as a Lingua Franca|World Englishes p186-196<br>Brexit & the future of English in Europe [@bolton2017brexit]|<span style="color: #139e38;">**READING QUIZ 7**</span>|
 |13|28/01|Group presentations
 
 
