--- a/we_refs.bib
+++ b/we_refs.bib
@@ -116,3 +116,59 @@
   year={2017},
   publisher={Wiley Online Library}
 }
+
+@book{holm1988pidgins,
+  title={Pidgins and creoles: Volume 1, theory and structure},
+  author={Holm, John Alexander},
+  volume={1},
+  year={1988},
+  publisher={Cambridge University Press}
+}
+
+
+@incollection{janse2003language,
+  title={Language death and language maintenance: problems and prospects.},
+  author={Janse, Mark},
+  booktitle={Language Death and Language Maintenance: Theoretical, practical and descriptive approaches},
+  pages={9--17},
+  year={2003},
+  publisher={John Benjamins}
+}
+
+@article{krauss1992world,
+  title={The world’s languages in crisis},
+  author={Krauss, Michael},
+  journal={Language},
+  volume={68},
+  number={1},
+  pages={4--10},
+  year={1992},
+  publisher={Alaska}
+}
+
+@article{grimes2000ethnologue,
+  title={Ethnologue, 14th edn, Vol. 1},
+  author={Grimes, BF},
+  journal={SIL International, Dallas},
+  year={2000}
+}
+
+@article{sasse1992theory,
+  title={Theory of language death},
+  author={Sasse, Hans-J{\"u}rgen},
+  journal={Language death: Factual and theoretical explorations with special reference to East Africa},
+  pages={7--30},
+  year={1992},
+  publisher={Berlin: Mouton de Gruyter}
+}
+
+@article{widdowson1994ownership,
+  title={The ownership of English},
+  author={Widdowson, Henry G},
+  journal={TESOL quarterly},
+  volume={28},
+  number={2},
+  pages={377--389},
+  year={1994},
+  publisher={JSTOR}
+}
